Created skeleton of portfolio header section, with links to be added title about me section projects section socials section
cleaned up the look
added images in projects section that act as links
added some resume info to about me

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <title>Leo's Portfolio</title>
 </head>
 <body>
-    <header>header area</header>
+    <header>
+        <div id="header">This is the header ID</div>
+        <ul id="links">
+            <li>about me</li>
+            <li>projects</li>
+            <li>socials</li>
+        </ul>
+    </header>
     <h1>This is my Portfolio</h1>
-    <div id="about">about section:
+    <div id="about"><h2>ABOUT ME</h2>
         <p>I am an effective post-graduate commited to learning and team contribution which i have displayed
             through years of self-directed study, teaching, and leading in different fields I have chosen
             to pursue. I work extremely well in collaborative environments, here I have excelled in 
@@ -19,7 +26,7 @@
             meticulous and detail-orinted with excellent obersvational, organizational and communcation skills.
         </p>
     </div>
-    <div id="Projects"><h2>All Projects</h2>
+    <div id="Projects"><h2>PROJECTS</h2>
         <div class="RPS">
             <p>text description</p>
             <a href="https://jesus130247.github.io/RPS/ "target="_blank" rel="noopener noreferrer"><img src="rps.png" width="500px" height="300px"></a>
@@ -42,6 +49,7 @@
             </div>  -->
         </div>
     </div>
+    <div id="socials"><h2>SOCIALS</h2></div>
 <footer>footer area</footer>
 </body>
 </html>
