Styled webpage added place-holder background images styles text-description to a certain size

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div id="Projects"><h2>PROJECTS</h2>
         <div class="RPS">
-            <p>text description</p>
+            <p class="textDescription">text description</p>
             <a href="https://jesus130247.github.io/RPS/ "target="_blank" rel="noopener noreferrer"><img src="rps.png" width="500px" height="300px"></a>
             <!-- <div class="popUp">
                 <iframe src="https://jesus130247.github.io/RPS/" width ='300x' height="300px"></iframe>
@@ -39,17 +39,24 @@
             <!-- <div class="popUp">
                 <iframe src="https://jesus130247.github.io/etch-sketch/" width ='550px' height="550px"></iframe>
             </div> -->
-            <p>text description</p>
+            <p class="textDescription">text description</p>
         </div>
         <div class="CALC">
-            <p>text description</p>
+            <p class="textDescription">text description</p>
             <a href="https://jesus130247.github.io/calc_backup/" target="_blank" rel="noopener noreferrer"><img src="calc.png" width="300px" height="300px"></a>
            <!-- <div class="popUp">
                 <iframe src="https://jesus130247.github.io/calc_backup/" width ='500px' height="500px"></iframe>
             </div>  -->
         </div>
     </div>
-    <div id="socials"><h2>SOCIALS</h2></div>
+    <div id="socials"><h2>SOCIALS</h2>
+        <ul class="socialLinks">
+            <li>Facebook</li>
+            <li>Instagram</li>
+            <li>LinkedIn</li>
+            <li>Email</li>
+        </ul>
+    </div>
 <footer>footer area</footer>
 </body>
 </html>
