Added hyperlinks in header these links move you to different parts of the page depending on what youre looking for

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <div id="header">This is the header ID</div>
         <ul id="links">
-            <li>about me</li>
-            <li>projects</li>
-            <li>socials</li>
+            <li><a href="https://jesus130247.github.io/Leo-portfolio/#about">about me</a></li>
+            <li><a href="https://jesus130247.github.io/Leo-portfolio/#project">projects</a></li>
+            <li><a href="https://jesus130247.github.io/Leo-portfolio/#socials">socials</a></li>
         </ul>
     </header>
     <h1>This is my Portfolio</h1>
-    <div id="about"><h2>ABOUT ME</h2>
+    <div id="about" name="about"><h2>ABOUT ME</h2>
         <p>I am an effective post-graduate commited to learning and team contribution which i have displayed
             through years of self-directed study, teaching, and leading in different fields I have chosen
             to pursue. I work extremely well in collaborative environments, here I have excelled in 
@@ -26,7 +26,7 @@
             meticulous and detail-orinted with excellent obersvational, organizational and communcation skills.
         </p>
     </div>
-    <div id="Projects"><h2>PROJECTS</h2>
+    <div id="projects" name="project"><h2>PROJECTS</h2>
         <div class="RPS">
             <p class="textDescription">text description</p>
             <a href="https://jesus130247.github.io/RPS/ "target="_blank" rel="noopener noreferrer"><img src="rps.png" width="500px" height="300px"></a>
@@ -49,7 +49,7 @@
             </div>  -->
         </div>
     </div>
-    <div id="socials"><h2>SOCIALS</h2>
+    <div id="socials" name="socials"><h2>SOCIALS</h2>
         <ul class="socialLinks">
             <li>Facebook</li>
             <li>Instagram</li>
